<resources>
    <string name="app_name">"Quiz App  "</string>
    <string name="write_your_answer_here">Write your answer here...</string>
    <string name="when_was_the_euro_introduced_as_legal_currency_on_the_world_market">1- When was the euro introduced as legal currency on the world market?</string>
    <string name="how_much_do_you_know">How much do you know?</string>
    <string name="onions">Onions</string>
    <string name="tulips">Tulips</string>
    <string name="garlic">Garlic</string>
    <string name="shallots">Shallots</string>
    <string name="which_kind_of_bulbs_were_once_exchanged_as_a_form_of_currency">2- Which kind of bulbs were once exchanged as a form of currency?</string>
    <string name="which_ones_are_the_primary_colours">3- Which ones are the primary colours?</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="what_is_the_painting_la_gioconda_more_usually_known_as">4- What is the painting \'La Gioconda\' more usually known as?</string>
    <string name="how_tall_would_a_double_elephant_folio_book_be">5- How tall would a double elephant folio book be?</string>
    <string name="_22_inches">22 inches</string>
    <string name="_44_inches">44 inches</string>
    <string name="_50_inches">50 inches</string>
    <string name="_100_inches">100 inches</string>
    <string name="in_2011_which_country_hosted_a_formula_1_race_for_the_first_time">6- In 2011, which country hosted a Formula 1 race for the first time?</string>
    <string name="in_needlework_what_does_ufo_refer_to">7- In needlework, what does UFO refer to?</string>
    <string name="undefined_fantastic_object">Undefined Fantastic Object</string>
    <string name="unfinished_object">Unfinished object</string>
    <string name="until_further_order_s">Until Further Order(s)</string>
    <string name="unidentified_fms_order">Unidentified FMS Order</string>
    <string name="unidentified_flying_object">Unidentified Flying Object</string>
    <string name="submit_answers">Submit answers</string>
    <string name="jan">jan</string>
    <string name="messageOne">Oh oh, not even one right!</string>
    <string name="messageTwo">Well, one right is better than none!</string>
    <string name="messageThree">Ok, two right this was a hard one!</string>
    <string name="messageFour">Not too bad, three right keep it up!</string>
    <string name="messageFive">Way to go, four right getting better!</string>
    <string name="messageSix">Well done, five right you are good at this!</string>
    <string name="messageSeven">Wow!, six right perfection is around the corner!</string>
    <string name="messageEight">You got all of them right!, ok!, pad yourself in the back and go tell your mom!</string>
    <string name="you_scored">"You scored "</string>
    <string name="india">india</string>
</resources>
